product and Details Add API